found and fix bug with dark mode

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  background-color: #e7eaf6;
 }
 
 .toggle {
